[tool.poetry]
name = "fee"
version = "0.1.0"
description = "Execute ELF files without dropping them on disk"
authors = ["Rasmus Moorats <xx@nns.ee>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
black = "^21.10b0"

[tool.poetry.scripts]
fee = "fee:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
